Add animations to CSS and update JS for interactivity

--- a/index.html
+++ b/index.html
@@ -2,19 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Prompt Engineering Module</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Introduction to Prompt Engineering</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Introduction to Prompt Engineering</h1>
-        <p>Learn how to optimize AI model performance with effective prompts.</p>
     </header>
-    <nav>
-        <a href="course.html">Course Content</a>
-        <a href="activity.html">Hands-On Activity</a>
-        <a href="quiz.html">Quiz</a>
-        <a href="feedback.html">Feedback</a>
-    </nav>
+    <main>
+        <section id="objective">
+            <h2>Objective</h2>
+            <p>To educate the audience on the importance of prompt engineering in optimizing AI model performance and its impact on AI responses.</p>
+        </section>
+        <section id="key-callouts">
+            <h2>Key Callouts</h2>
+            <div class="callout">
+                <h3>Definition and Importance</h3>
+                <p>Understanding prompt engineering and its critical role in AI model performance.</p>
+            </div>
+            <div class="callout">
+                <h3>Role in Optimizing AI Model Performance</h3>
+                <p>How well-designed prompts improve accuracy, relevance, and efficiency.</p>
+            </div>
+            <div class="callout">
+                <h3>Effective Prompts</h3>
+                <p>Characteristics of effective prompts: relevant, specific, unambiguous, and well-structured.</p>
+            </div>
+            <div class="callout">
+                <h3>Bias Mitigation</h3>
+                <p>Designing diverse and inclusive prompts to reduce bias and improve fairness.</p>
+            </div>
+            <div class="callout">
+                <h3>Understanding AI Responses</h3>
+                <p>Importance of well-designed prompts in critical domains like healthcare.</p>
+            </div>
+            <div class="callout">
+                <h3>Methods and Techniques</h3>
+                <p>Various methods for prompt optimization, including pre-training adjustments and contextual cues.</p>
+            </div>
+            <div class="callout">
+                <h3>Model Parameters</h3>
+                <p>Adjusting parameters like temperature and top_p to balance creativity and consistency.</p>
+            </div>
+        </section>
+        <section id="next-steps">
+            <h2>Next Steps</h2>
+            <ul>
+                <li><strong>Research and Development:</strong> Further research on prompt engineering techniques.</li>
+                <li><strong>Implementation:</strong> Apply prompt engineering methods in AI projects.</li>
+                <li><strong>Evaluation:</strong> Continuously evaluate and refine prompts for better performance.</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Introduction to Prompt Engineering</p>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
